Reflection - incremental gwt reachability compilation loop